gcc/testsuite/rust/rustc/ui/pattern/usefulness/issue-78123-non-exhaustive-reference.rs
enum A {}
// { dg-note "" "" { target *-*-* } .-1 }
// { dg-note "" "" { target *-*-* } .-2 }

fn f(a: &A) {
    match a {}
// { dg-error ".E0004." "" { target *-*-* } .-1 }
// { dg-note ".E0004." "" { target *-*-* } .-2 }
// { dg-note ".E0004." "" { target *-*-* } .-3 }
}

fn main() {}

